prevent page from jumping around on collapsing people near the bottom
should've grouped this commit together with the border-bottom one. oh
well

--- a/treed.css
+++ b/treed.css
@@ -7,6 +7,7 @@
 
 body {
     max-width: 80ch;
+	margin-bottom: 30em; /* prevents the page from jumping around when collapsing people near the bottom */
 }
 
 .toot {
